--- a/spec/pom.xml
+++ b/spec/pom.xml
@@ -25,7 +25,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>jakarta.xml.registry</groupId>
     <artifactId>xml-registries-spec</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
     <packaging>pom</packaging>
     <name>Jakarta XML Registries Specification</name>
 
